[gd_scene load_steps=15 format=3 uid="uid://cnqivpcpimlwc"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_u3x3w"]
[ext_resource type="Script" path="res://panels/NewCuePlayback/NewCuePlayback.gd" id="2_4bo1g"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/SolidPanel.tres" id="2_bilu6"]
[ext_resource type="Script" path="res://panels/NewCuePlayback/Controls.gd" id="3_ijo7h"]
[ext_resource type="Texture2D" uid="uid://dnfqijjcnit7c" path="res://assets/icons/CueList.svg" id="3_qadkc"]
[ext_resource type="Texture2D" uid="uid://c1cl6qetwg8st" path="res://assets/icons/Arrow_back.svg" id="3_v1amt"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/PanelMenuBar.tres" id="4_4ngmv"]
[ext_resource type="Texture2D" uid="uid://dghhvu27mcp3u" path="res://assets/icons/PlayPause.svg" id="4_m1awm"]
[ext_resource type="Texture2D" uid="uid://kkblmodueva1" path="res://assets/icons/Arrow_foward.svg" id="4_nfbmp"]
[ext_resource type="Texture2D" uid="uid://qporw0h5fc8b" path="res://assets/icons/Stop.svg" id="5_3wccy"]
[ext_resource type="PackedScene" uid="uid://c30mlwfrsxbcl" path="res://components/IntensityButton/IntensityButton.tscn" id="6_i5qdf"]
[ext_resource type="FontFile" uid="uid://crlak6jhg5jy2" path="res://assets/font/RubikMonoOne-Regular.ttf" id="6_knbom"]
[ext_resource type="PackedScene" uid="uid://dfu5s8fjy0ex4" path="res://components/UIPanel/EditControls.tscn" id="9_ssq7m"]

[sub_resource type="LabelSettings" id="LabelSettings_fuler"]
font = ExtResource("6_knbom")

[node name="NewCuePlayback" type="PanelContainer" node_paths=PackedStringArray("edit_controls")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u3x3w")
theme_override_styles/panel = ExtResource("2_bilu6")
script = ExtResource("2_4bo1g")
edit_controls = NodePath("VBoxContainer/PanelContainer2/HBoxContainer/EditControls")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("4_4ngmv")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="CueName" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Empty Playback"
icon = ExtResource("3_qadkc")
flat = true

[node name="CuePlaybackControls" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/CuePlaybackControls"]
layout_mode = 2

[node name="PlayPause" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer/CuePlaybackControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("4_m1awm")

[node name="Stop" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer/CuePlaybackControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_3wccy")

[node name="IntensityButton" parent="VBoxContainer/PanelContainer2/HBoxContainer/CuePlaybackControls/HBoxContainer" instance=ExtResource("6_i5qdf")]
layout_mode = 2

[node name="EditControls" parent="VBoxContainer/PanelContainer2/HBoxContainer" instance=ExtResource("9_ssq7m")]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Controls" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_4ngmv")
script = ExtResource("3_ijo7h")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="Previous" type="Button" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("3_v1amt")
icon_alignment = 1

[node name="GoTo" type="Button" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GO"

[node name="Next" type="Button" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("4_nfbmp")
icon_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/Controls/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "On Cue: "

[node name="CueNumber" type="Label" parent="VBoxContainer/Controls/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_fuler")

[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/CueName" to="." method="_on_cue_name_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/CuePlaybackControls/HBoxContainer/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/CuePlaybackControls/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls/HBoxContainer/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls/HBoxContainer/Next" to="." method="_on_next_pressed"]
